# cuda-cource-2025

./: .gitignore  README.md
works/KirpaDmitriy/lab1/: Makefile  README.md
works/KirpaDmitriy/lab1/include/: shapes.h
works/KirpaDmitriy/lab1/src/: main.cpp  shapes.cu
works/KirpaDmitriy/lab2/: README.md  matrix_mul.cu
works/KirpaDmitriy/lab3/: README.md  sobel.cu  sort.cu
works/KirpaDmitriy/lab4/: README.md  sort.cu
works/RAMIISSA2/: README.md
works/RAMIISSA2/Lab 1/: ReadMe.md
works/RAMIISSA2/Lab 1/include/: circle.h  good_circle.h  square.h  triangle.h
works/RAMIISSA2/Lab 1/src/: circle.cu  good_circle.cu  main.cu  square.cu  test.cu  triangle.cu
works/RAMIISSA2/Lab 2/: ReadMe.md
works/RAMIISSA2/Lab 2/benchmarks/: benchmark.cpp
works/RAMIISSA2/Lab 2/src/: main.cpp  matmul_cpu.cpp  matmul_cpu.hpp  matmul_naive.cu  matmul_tiled.cu
works/RAMIISSA2/Lab 4/: Makefile  ReadMe.md
works/RAMIISSA2/Lab 4/include/: cpu_sort.h  utils.h
works/RAMIISSA2/Lab 4/src/: benchmark.cu  cpu_sort.cpp  main.cu  radix_sort.cu  thrust_sort.cu  utils.cpp
works/apvyugina/lab2/: Makefile  README.md
works/apvyugina/lab2/include/: eigen_utils.h  kernel_launcher.h  multiplication.h  utils.h
works/apvyugina/lab2/src/: cpu_multiplication.cpp  gpu_multiplication.cu  main.cpp
works/apvyugina/lab3/: Makefile  README.md
works/apvyugina/lab3/include/: image_utils.h
works/apvyugina/lab3/src/: cpu_sobel.cpp  gpu_sobel.cu  image_utils.cpp
works/apvyugina/lab4/: Makefile
works/apvyugina/lab4/include/: radix_sort.h
works/apvyugina/lab5/: .gitignore  CMakeLists.txt  Makefile  README.md
works/apvyugina/lab5/include/: Buffers.h  Calibrator.h  DetectionModelTRT.h  Timers.h  Utils.h
works/apvyugina/lab5/src/: DetectionModelTRT.cpp  Utility.cpp  main.cpp
works/as-harlamov/lab3/: .gitignore  Makefile  README.md
works/as-harlamov/lab4/: Makefile  sort.cu
works/as-harlamov/lab5/: CMakeLists.txt  README.md
works/as-harlamov/lab5/scripts/: export_model.py
works/as-harlamov/lab5/src/: main.cpp  retinanet.cu  retinanet.h
works/av-sandzhieva/lab1/: Makefile  README.md
works/av-sandzhieva/lab2/: Makefile
works/bpoloshkov/lab1/: Makefile  README.md
works/bpoloshkov/lab2/: Makefile  README.md
works/bpoloshkov/lab3/: Makefile  README.md
works/bpoloshkov/lab4/: Makefile  README.md
works/cherednikov-eo/lab2/: error_check.cuh  lab2.cu
works/cherednikov-eo/lab_1/: Makefile  README.md  error_check.cuh  main.cu
works/cherednikov-eo/lab_2/: Makefile  README.md  main.cu
works/cherednikov-eo/lab_3/: .gitignore  Makefile  README.md
works/cherednikov-eo/lab_4/: Makefile  README.md
works/gromov_na/: Makefile  README.md
works/gromov_na/lab2/: README.md
works/konstantinov_aa/lab1/: README.md  circle.exp  main.cpp  main.cu
works/konstantinov_aa/lab2/: README.md  main.cu  mult.exp
works/konstantinov_aa/lab3/: Makefile  README.md  main_opencv.cpp  sobel.cu
works/konstantinov_aa/lab5/: README.md
works/maslov_mi/lab1/: Makefile  README.md
works/maslov_mi/lab2/: Makefile  README.md  lab2.cu
works/maslov_mi/lab3/: Makefile  README.md
works/maslov_mi/lab4/: Makefile  README.md
works/maslov_mi/lab5/: .gitignore  CMakeLists.txt  Makefile  README.md  export_retinanet_raw.py
works/maslov_mi/lab5/include/: calibrator.h  engine.h  utils.h
works/maslov_mi/lab5/onnx_scripts/: .gitignore  download_model.py  quantize_int8.sh
works/maslov_mi/lab5/src/: calibrator.cpp  engine.cpp  main.cpp  utils.cpp
works/pavel_pren/lab1/: README.md
works/pavel_pren/lab2/: README.md  matrix_multiply.cu
works/pavel_pren/lab3/: Makefile  README.md
works/pavel_pren/lab4/: Makefile  README.md
works/rvkrisanov/lab2/: Makefile  README.md
works/rvkrisanov/lab3/: Makefile  README.md
works/rvkrisanov/lab4/: Makefile  README.md
works/voinov-lv/lab1/: Makefile  README.md  main.cu
works/voinov-lv/lab2/: Makefile  README.md
works/voinov-lv/lab3/: Makefile  README.md
works/voinov-lv/lab4/: Makefile  README.md
(+70 files in other folders)
